<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
            <include
            android:id="@+id/includ_upcoming_treatments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_beautician_row" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/includ_upcoming_treatments"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color_gray" >
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="7dp" >

                <utilities.view.MyFontTextView
                    android:id="@+id/tv_message_inner_treatment_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tvMessageInnerTreatmentDate"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/common_text_size" />

                <utilities.view.MyFontTextView
                    android:id="@+id/tvMessageInnerTreatmentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="7dp"
                    android:drawableRight="@drawable/ic_calendar"
                    android:gravity="center"
                    android:text="@string/when"
                    android:textColor="@color/app_most_common_yellow_color"
                    android:textSize="@dimen/common_title_text_size" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color_gray" >
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:padding="7dp" >

                <utilities.view.MyFontTextView
                    android:id="@+id/tvMessageWantedTreatmentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_treatment"
                    android:gravity="center_vertical"
                    android:text="@string/wanted_treatment"
                    android:textColor="@color/app_most_common_yellow_color"
                    android:textSize="@dimen/common_title_text_size" />

                <LinearLayout
                    android:id="@+id/llMessageWantedTreatment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMessageWantedTreatmentTitle"
                    android:layout_toLeftOf="@+id/tvMessageWantedTreatmentTitle"
                    android:orientation="horizontal"
                    android:paddingTop="7dp" >

                    <utilities.view.MyFontTextView
                        android:id="@+id/tv_message_wanted_treatment1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/common_text_size" />

                    <utilities.view.MyFontTextView
                        android:id="@+id/tv_message_wanted_treatment2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/common_text_size" />
                </LinearLayout>
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color_gray" >
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="7dp" >

                <utilities.view.MyFontTextView
                    android:id="@+id/tv_message_inner_treatment_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tvMessageInnerTreatmentLocation"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/common_text_size" />

                <utilities.view.MyFontTextView
                    android:id="@+id/tvMessageInnerTreatmentLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="7dp"
                    android:drawableRight="@drawable/ic_location"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/app_most_common_yellow_color"
                    android:textSize="@dimen/common_title_text_size" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color_gray" >
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="7dp" >

                <utilities.view.MyFontTextView
                    android:id="@+id/tv_message_inner_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tvMessageInnerRemarks"
                    android:text="@string/remarks_empty"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/common_text_size" />

                <utilities.view.MyFontTextView
                    android:id="@+id/tvMessageInnerRemarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="7dp"
                    android:drawableRight="@drawable/ic_remaks"
                    android:gravity="center"
                    android:text="@string/remarks"
                    android:textColor="@color/app_most_common_yellow_color"
                    android:textSize="@dimen/common_title_text_size" />
            </RelativeLayout>
        </LinearLayout>

</RelativeLayout>
